# agentrouter

./: .env.example  .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_MEMORY.md  README.md  opencode.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_all_tables.py  0002_add_security_audit_events.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: __init__.py  base.py  enums.py  session.py
apps/api/app/integrations/: __init__.py  queue.py
apps/api/app/models/: __init__.py  agent.py  approval.py  memory_chunk.py  memory_document.py  project.py  security_audit.py  task.py  task_event.py  telegram_topic.py
apps/api/app/policy/: __init__.py  runtime_guardrails.py
apps/api/app/routers/: __init__.py  agents.py  approvals.py  health.py  memory.py  projects.py  runtime.py  task_events.py  tasks.py  telegram_topics.py  telegram_webapp.py  version.py
apps/api/app/schemas/: __init__.py  agent.py  approval.py  memory.py  project.py  task.py  task_event.py  telegram_topic.py  telegram_webapp.py
apps/api/app/security/: __init__.py  context.py  permissions.py  redaction.py
apps/api/app/services/: __init__.py  agent_service.py  approval_service.py  audit_service.py  memory_chunking_service.py  memory_embedding_service.py  memory_indexing_service.py  memory_policy_service.py  memory_retrieval_service.py  (+10 more)
apps/api/tests/: conftest.py  test_agents.py  test_approvals.py  test_approvals_idempotency.py  test_config.py  test_event_type_validation.py  test_health.py  test_memory_chunking.py  test_memory_policy.py  test_memory_provisioning.py  test_memory_retrieval.py  test_memory_router.py  test_memory_service.py  test_opencode_transport.py  test_pipeline.py  test_projects.py  test_runtime.py  test_runtime_be04.py  test_security_audit.py  test_security_audit_integration.py  test_security_permissions.py  test_security_redaction.py  test_tasks.py  test_tasks_plan_endpoint.py  test_telegram_topic_policy.py  test_telegram_topics.py  test_telegram_webapp_auth.py  test_version.py
apps/telegram-bot/: README.md  pyproject.toml
apps/telegram-bot/app/: __init__.py  bot.py  config.py  logging.py  main.py
apps/telegram-bot/tests/: test_approve_handler.py  test_bind_unbind_topic_handlers.py  test_callback_handlers.py  test_commands_rendering.py  test_formatters.py  test_keyboards.py  test_messages.py  test_plan_handler.py  test_reject_handler.py  test_start_handler.py  test_status_handler.py  test_tg04_config.py  test_tg04_logging.py  test_topic_binding.py  test_topic_context.py
apps/worker/: README.md  pyproject.toml
apps/worker/app/: __init__.py  celery_app.py  config.py  main.py  queues.py
apps/worker/tests/: manual_wrk04_real_smoke.py  test_agent_plan_pipeline.py  test_celery_app.py  test_config.py  test_execute_e2e_fake.py  test_execute_security.py  test_notifier.py  test_queues.py  test_sandbox_runner.py  test_tasks.py
(+313 files in other folders)
