[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mc-api"
version = "0.1.0"
description = "Agent Mission Control — Orchestrator API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery>=5.3",
    "redis>=5.0",
    "aiogram>=3.4",
    "httpx>=0.27",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build]
packages = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "alembic",
    "alembic.ini",
    "pyproject.toml",
]

[tool.pytest.ini_options]
# API tests use @pytest.mark.anyio with anyio_backend="asyncio" fixture.
# strict mode avoids pytest-asyncio/anyio event-loop mismatch.
asyncio_mode = "strict"
testpaths = ["tests"]
