[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mc-telegram-bot"
version = "0.1.0"
description = "Agent Mission Control — Telegram Bot Gateway"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.hatch.build]
packages = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "tests",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
