[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mc-worker"
version = "0.1.0"
description = "Agent Mission Control — Celery Worker"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.3",
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.hatch.build]
packages = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "tests",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
